# reNamerX

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NEXT-STEPS.md  README.md  RELEASE-CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  USAGE.md  VERSION.md  favicon-note.txt  git-setup.ps1  git-setup.sh  index.html  jest.config.js  package-lock.json  package.json  robots.txt  sitemap.xml  vite.config.js
404/: index.html
_next/static/-JlO4JBGpvSvtihJYrNll/: _buildManifest.js
_next/static/Cd5u46kuk2MmwMf9Jvj0X/: _buildManifest.js
_next/static/RglurqSU-aE1d5WYJ-YVz/: _buildManifest.js
_next/static/chunks/: 417-7147824f2c038e12.js  810-69f0a59d8dfda211.js  (+5 more)
docs/: index.html
docs/faq/: index.html
docs/features/: index.html
docs/getting-started/: index.html
docs/troubleshooting/: index.html
docs/usage-guide/: index.html
download/: index.html
features/: index.html
feedback/: index.html
images/: README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: components.test.tsx  fileOperations.test.ts  keyboardShortcuts.test.ts  metadata.test.ts  setup.ts  stores.test.ts
src/components/: index.ts
src/config/: constants.ts
src/context/: ErrorContext.tsx
src/hooks/: useErrorHandler.ts
src/stores/: fileFilterStore.ts  fileStore.ts  historyStore.ts  rulesStore.ts  settingsStore.ts
src/styles/: compact.css  theme.css
src/types/: error.ts  file.ts  files.ts
src/utils/: fileUtils.ts  keyboardShortcuts.ts
(+57 files in other folders)
